--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-image: url(images/background.jpg);
     background-size: cover;
+    margin: 0px;
 }
 
 h1 {
@@ -17,9 +18,10 @@ h1,h2 {
 
 h3{
     margin:auto;
-    display: flex;
-    flex-wrap: wrap;
+    display:block;
+    /* flex-wrap: wrap; */
     font-size: larger;
+    position: relative;
 }
 
 .logo {
@@ -29,16 +31,17 @@ h3{
 
 .top{
     height: 100px;
-    width: 500px;
+    width: 630px;
     display: flex;
     flex-wrap: wrap;    
     margin: auto;
+    position: relative;
+    background-color: blueviolet;
 }
 
 .top-child{
     height: 10px;
     width: 100px;
-    background-color: brown;
     /* border: solid black 1px; */
     position: relative;
     /* left: 50px; */
@@ -53,6 +56,8 @@ h3{
     display: flex;
     flex-wrap: wrap;
     margin: auto;
+    margin-bottom: 30px;
+
 }
 
 .square {
@@ -78,6 +83,19 @@ h3{
 
 #btn-start{
     margin: auto;
+    /* position: absolute; */
+}
+
+#btn-next{
+    margin: auto;
+    
+    /* position: absolute; */
+}
+
+#btn-restart{
+    margin: auto;
+    
+    /* position: absolute; */
 }
 
 /* <style>
