--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
     margin: 0px;
 }
 
+.main{
+    padding: 389px;
+}
+
 h1 {
     margin: 30px, 0, 0, 0;
 }
@@ -24,6 +28,11 @@ h3{
     position: relative;
 }
 
+.lets-play-btn{
+    margin: auto;
+    position: relative;
+}
+
 .logo {
     background-image: url(images/WATERWAIVER.png);
     background-size: cover;
@@ -37,6 +46,8 @@ h3{
     margin: auto;
     position: relative;
     background-color: blueviolet;
+    border: solid yellow 5px;
+
 }
 
 .top-child{
@@ -81,9 +92,40 @@ h3{
     background-size: cover;
 }
 
+#letsPlay {
+    margin: auto;
+    /* position: absolute; */
+    width: 200px;
+    height: 50px;
+    border: none;
+    color: black;
+    background-color: purple;
+    border-radius: 2px;
+    box-shadow: inset 0 0 0 0 yellow;
+    transition: ease-out 0.3s;
+    font-size: 1rem;
+}
+
+#letsPlay:hover {
+    box-shadow: inset 200px 0 0 0 yellow;;
+}
+
 #btn-start{
     margin: auto;
     /* position: absolute; */
+    width: 100px;
+    height: 30px;
+    border: none;
+    color: white;
+    background-color: red;
+    border-radius: 2px;
+    box-shadow: inset 0 0 0 0 #f9e506;
+    transition: ease-out 0.3s;
+    font-size: 1rem;
+}
+
+#btn-start:hover {
+    box-shadow: inset 100px 0 0 0 #f9e506;;
 }
 
 #btn-next{
@@ -96,6 +138,12 @@ h3{
     margin: auto;
     
     /* position: absolute; */
+}
+
+#timeleft {
+    margin:auto;
+    position: absolute;
+    text-align: center;
 }
 
 /* <style>
