--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 
 h1 {
     margin: 30px, 0, 0, 0;
-    color:purple;
+    color:black;
 }
 
 h2 {
@@ -179,8 +179,20 @@ h3{
 
 #btn-restart{
     margin: auto;
-    
     /* position: absolute; */
+    width: 100px;
+    height: 30px;
+    border: none;
+    color: white;
+    background-color: red;
+    border-radius: 2px;
+    box-shadow: inset 0 0 0 0 #f9e506;
+    transition: ease-out 0.3s;
+    font-size: 1rem;
+}
+
+#btn-restart:hover {
+    box-shadow: inset 100px 0 0 0 #f9e506;;
 }
 
 #timeleft {
