--- a/style.css
+++ b/style.css
@@ -155,16 +155,16 @@ h3{
     width: 200px;
     height: 50px;
     border: none;
-    color: black;
+    color: yellow;
     background-color: purple;
     border-radius: 2px;
-    box-shadow: inset 0 0 0 0 yellow;
+    box-shadow: inset 0 0 0 0 orange;
     transition: ease-out 0.3s;
     font-size: 1rem;
 }
 
 #letsPlay:hover {
-    box-shadow: inset 200px 0 0 0 yellow;;
+    box-shadow: inset 200px 0 0 0 orange;;
 }
 
 #btn-start{
